# YMulator-Synth

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  README_ja.md
.github/workflows/: build-cross-platform.yml  build-release.yml  build-test.yml  pr-tests.yml
cmake/: CMakeLists.txt  CompilerWarnings.cmake  JUCEConfig.cmake
docs/: CRASH_PREVENTION_LESSONS.md  chipsynth-adr.md  chipsynth-design-main.md  chipsynth-development-status.md  chipsynth-implementation-guide.md  chipsynth-improvement-roadmap.md  chipsynth-juce-implementation-details.md  chipsynth-phase1-completion-roadmap.md  chipsynth-technical-spec.md  chipsynth-vopm-format-spec.md  chipsynth-ymfm-integration-guide.md  refactoring-progress.md  refactoring-strategy.md  ymulatorsynth-adr.md  ymulatorsynth-design-main.md  ymulatorsynth-development-status.md  ymulatorsynth-extension-guide.md  ymulatorsynth-implementation-guide.md  ymulatorsynth-improvement-roadmap.md  ymulatorsynth-juce-implementation-details.md  ymulatorsynth-phase1-completion-roadmap.md  ymulatorsynth-technical-spec.md  ymulatorsynth-vopm-format-spec.md  ymulatorsynth-ymfm-integration-guide.md
resources/presets/: chipsynth-au-preset-collection.opm
scripts/: README.md  build-dev.sh  build-release.sh  build.sh  test.sh
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/core/: AudioProcessingInterface.h  AudioProcessor.cpp  AudioProcessor.h  FMCore.cpp  FMCore.h  MidiProcessor.cpp  MidiProcessor.h  MidiProcessorInterface.h  PanProcessor.cpp  PanProcessor.h  ParameterManager.cpp  ParameterManager.h  PresetManagerInterface.h  StateManager.cpp  StateManager.h  VoiceManager.cpp  VoiceManager.h  VoiceManagerInterface.h
src/dsp/: EnvelopeGenerator.cpp  EnvelopeGenerator.h  NoteConverter.cpp  NoteConverter.h  ParameterConverter.cpp  ParameterConverter.h  RegisterManager.cpp  RegisterManager.h  UnisonEngine.cpp  UnisonEngine.h  YM2151Registers.h  YmfmWrapper.cpp  YmfmWrapper.h  YmfmWrapperInterface.h
src/tests/: PanTest.cpp  PanTest.h
src/ui/: AlgorithmDisplay.cpp  AlgorithmDisplay.h  EnvelopeDisplay.cpp  EnvelopeDisplay.h  GlobalControlsPanel.cpp  GlobalControlsPanel.h  MainComponent.cpp  MainComponent.h  OperatorPanel.cpp  OperatorPanel.h  PresetUIManager.cpp  PresetUIManager.h  RotaryKnob.cpp  RotaryKnob.h
src/utils/: Debug.h  GlobalPanPosition.h  ParameterIDs.h  PresetManager.cpp  PresetManager.h  VOPMParser.cpp  VOPMParser.h
tests/: AudioQualityTest.cpp  CMakeLists.txt  PanModeRegressionTest.cpp  README.md  RandomPanDebugTest.cpp  RandomPanModeTest.cpp  RandomPanOutputTest.cpp  test_main.cpp
tests/integration/: ComprehensiveIntegrationTest.cpp
tests/mocks/: MockAudioProcessorHost.cpp  MockAudioProcessorHost.h  MockBinaryData.cpp  MockBinaryData.h  MockYmfmWrapper.h
tests/performance/: PerformanceRegressionTest.cpp
tests/ui/: MainComponentTest.cpp  UITestHelpers.h
tests/unit/: GlobalPanTest.cpp  MidiProcessorTest.cpp  ParameterDebugTest.cpp  ParameterManagerTest.cpp  ParameterStateIntegrationTest.cpp  PluginBasicTest.cpp  PluginProcessorComprehensiveTest.cpp  PresetManagerTest.cpp  SimpleParameterTest.cpp  StateManagerTest.cpp  UnisonEngineTest.cpp  VOPMParserTest.cpp  VoiceManagerTest.cpp  YmfmWrapperTest.cpp
